Implemented new modular architecture

--- a/NBody/NBody.vcxproj.filters
+++ b/NBody/NBody.vcxproj.filters
@@ -10,26 +10,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cuda_kernel.cuh">
-      <Filter>CUDA</Filter>
-    </ClInclude>
     <ClInclude Include="lodepng.h">
       <Filter>LodePNG</Filter>
     </ClInclude>
-    <ClInclude Include="constants.cuh">
-      <Filter>Resolver</Filter>
-    </ClInclude>
     <ClInclude Include="NBodyGLViewer.h">
       <Filter>Viewer\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="AbstractResolver.h">
-      <Filter>Resolver\Intf</Filter>
-    </ClInclude>
-    <ClInclude Include="CudaStaticResolver.h">
-      <Filter>Resolver\Impl\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="CudaStaticResolver.cuh">
-      <Filter>Resolver\Impl\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -40,6 +25,12 @@
       <Filter>Shader</Filter>
     </None>
     <None Include="config.yaml" />
+    <None Include="cuda_kernel.cu">
+      <Filter>CUDA</Filter>
+    </None>
+    <None Include="cuda_kernel.cuh">
+      <Filter>CUDA</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="CUDA">
@@ -51,21 +42,6 @@
     <Filter Include="LodePNG">
       <UniqueIdentifier>{89215eb3-24dd-463d-b91c-7b7040586481}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resolver">
-      <UniqueIdentifier>{7984e96e-7628-4da5-be8f-df24cf2ca755}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resolver\Impl">
-      <UniqueIdentifier>{6587d064-9426-47d0-9a27-82952b87057b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resolver\Intf">
-      <UniqueIdentifier>{72cfa99b-ec51-4dec-8add-827d07024947}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resolver\Impl\Header">
-      <UniqueIdentifier>{6910fe23-83a7-4469-b9ed-9ce7cc7b8254}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resolver\Impl\Source">
-      <UniqueIdentifier>{0ac4cdbe-f44f-481b-ace5-611f4fa91345}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Viewer">
       <UniqueIdentifier>{8be751e2-0f7d-4529-b705-5bbac5be0158}</UniqueIdentifier>
     </Filter>
@@ -75,16 +51,5 @@
     <Filter Include="Viewer\Source">
       <UniqueIdentifier>{53b375d9-2166-4ece-b9d3-61e83ff429a3}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <CudaCompile Include="cuda_kernel.cu">
-      <Filter>CUDA</Filter>
-    </CudaCompile>
-    <CudaCompile Include="CudaStaticResolver.cu">
-      <Filter>Resolver\Impl\Source</Filter>
-    </CudaCompile>
-    <CudaCompile Include="CudaStaticResolver.cpp">
-      <Filter>Resolver\Impl\Source</Filter>
-    </CudaCompile>
   </ItemGroup>
 </Project>
