Updated CPU resolver

--- a/CPUAllPairsResolver/CPUAllPairsResolver.vcxproj.filters
+++ b/CPUAllPairsResolver/CPUAllPairsResolver.vcxproj.filters
@@ -25,5 +25,8 @@
     <ClInclude Include="CPUAllPairsResolver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
