--- a/CPUAllPairsResolver/CPUAllPairsResolver.vcxproj
+++ b/CPUAllPairsResolver/CPUAllPairsResolver.vcxproj
@@ -86,6 +86,7 @@
     <ClCompile Include="CPUAllPairsResolver.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.h" />
     <ClInclude Include="DllExport.h" />
     <ClInclude Include="CPUAllPairsResolver.h" />
   </ItemGroup>
